--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <li class="gras"> Jeux vidéo</li>
         <li class="italique"> Animaux</li>
         <li class="gras"> Spider-Man</li>
+        <li class="italique"> Chiens</li>
     </ul>
 
 </body>
